--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-27  Hans-Peter Nilsson  <hp@axis.com>
+
+	* config/cris/cris.h (INT_ASM_OP): Remove.
+
 2001-11-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/i386/sol2.h (WINT_TYPE): Redefine.
