--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-17  Corey Minyard  <minyard@acm.org>
+	    Richard Henderson  <rth@redhat.com>
+
+	* unroll.c (loop_iterations): Detect one situation in which we
+	overestimate the number of iterations.
+
 2001-11-27  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* gcc.c (set_input): Export.
