* unroll.c (loop_iterations): Move last change ...         * doloop.c (doloop_modify_runtime): ... here.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47387 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-17  Richard Henderson  <rth@redhat.com>
+
+	* unroll.c (loop_iterations): Move last change ...
+	* doloop.c (doloop_modify_runtime): ... here.
+
 2001-11-17  Corey Minyard  <minyard@acm.org>
 	    Richard Henderson  <rth@redhat.com>
 
