--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-28  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* doc/passes.texi: Remove reference to c-dump.c. Update tree inlining
+	doc.
+
 2001-11-27  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.c (ASM_DEBUG_SPEC): Use conditional expression rather than
