--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2001-11-27  DJ Delorie <dj@redhat.com>
+	    Zack Weinberg  <zack@codesourcery.com>
+
+	When build != host, create libiberty for the build machine.
+
+	* Makefile.in (TARGET_CONFIGARGS, BUILD_CONFIGARGS): Replace
+	CONFIG_ARGUMENTS.
+	(ALL_BUILD_MODULES_LIST, BUILD_CONFIGDIRS, BUILD_SUBDIR):
+	New variables.
+	(ALL_BUILD_MODULES, CONFIGURE_BUILD_MODULES): New variables
+	and rules.
+	(all.normal): Depend on ALL_BUILD_MODULES.
+	(CONFIGURE_TARGET_MODULES rule): Use TARGET_CONFIGARGS.
+	(all-build-libiberty): Depend on configure-build-libiberty.
+
+	* configure: Calculate and substitute proper value for
+	ALL_BUILD_MODULES.
+	* configure.in: Create the build subdirectory.
+	Calculate and substitute TARGET_CONFIGARGS (formerly
+	CONFIG_ARGUMENTS); also BUILD_SUBDIR and BUILD_CONFIGARGS (new).
+
 2001-11-26  Ziemowit Laski  <zlaski@apple.com>
 
 	* MAINTAINERS (write-after-approval): Add self.
@@ -83,7 +104,7 @@ Thu Oct 11 21:50:15 2001  J"orn Rennecke <amylaar@onetel.net.uk>
 
 2001-10-10  Geert Bosch  <bosch@gnat.com>
 
-	* MAINTAINERS (Various maintainers: Ada front end): 
+	* MAINTAINERS (Various maintainers: Ada front end):
 	Added Robert Dewar.
 
 2001-10-03  David Billinghurst <David.Billinghurst@riotinto.com>
@@ -106,7 +127,7 @@ Thu Oct 11 21:50:15 2001  J"orn Rennecke <amylaar@onetel.net.uk>
 
 	* configure.in (*-*-linux*): Disable configuration of target-newlib
 	and target-libgloss.
-	
+
 2001-09-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (EXTRA_TARGET_FLAGS): Pass RANLIB_FOR_TARGET for
@@ -173,7 +194,7 @@ Mon Jul 30 19:24:13 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
 2001-07-25  Andrew Haley  <aph@cambridge.redhat.com>
 
-        * configure.in (sh-*-linux*): New.
+	* configure.in (sh-*-linux*): New.
 
 2001-07-27  Richard Henderson  <rth@redhat.com>
 
@@ -185,7 +206,7 @@ Mon Jul 30 19:24:13 CEST 2001  Jan Hubicka  <jh@suse.cz>
 
 2001-07-16  Aldy Hernandez  <aldyh@redhat.com>
 
-        * config.sub: Fix mips64vr5000el typo in CPU-COMPANY.
+	* config.sub: Fix mips64vr5000el typo in CPU-COMPANY.
 
 Fri Jul 13 14:31:57 2001  Nicola Pero  <nicola@brainstorm.co.uk>
 
@@ -381,8 +402,8 @@ Mon Apr 23 09:15:03 2001  Anthony Green  <green@redhat.com>
 
 2001-04-05  Alexandre Oliva  <aoliva@redhat.com>
 
-        * config.sub: Make sure to match an already-canonicalized
-        machine name (eg. mn10300-unknown-elf).
+	* config.sub: Make sure to match an already-canonicalized
+	machine name (eg. mn10300-unknown-elf).
 
 2001-04-01  Alexandre Oliva  <aoliva@redhat.com>
 
@@ -472,7 +493,7 @@ Mon Apr 23 09:15:03 2001  Anthony Green  <green@redhat.com>
 	EXTRA_GCC_FLAGS, $(DO_X) targets only when the RANLIB is set.
 
 2001-02-28  Benjamin Kosnik  <bkoz@redhat.com>
-            Alexandre Oliva  <aoliva@redhat.com>
+	    Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (check-c++): Use tabs, not spaces.
 
@@ -482,7 +503,7 @@ Mon Apr 23 09:15:03 2001  Anthony Green  <green@redhat.com>
 
 2001-02-19  Benjamin Kosnik  <bkoz@redhat.com>
 
-        * Makefile.in (check-c++): New rule.
+	* Makefile.in (check-c++): New rule.
 
 	* configure.in (target_libs): Remove libg++.
 	(noconfigdirs): Remove libg++.
@@ -531,7 +552,7 @@ Mon Apr 23 09:15:03 2001  Anthony Green  <green@redhat.com>
 2001-02-08  Chandrakala Chavva <cchavva@redhat.com>
 
 	* configure.in: for *-chorusos, don't config target-newlib and
-        target-libgloss.
+	target-libgloss.
 
 2001-02-06  Ben Elliston  <bje@redhat.com>
 
@@ -761,11 +782,11 @@ Mon Apr 23 09:15:03 2001  Anthony Green  <green@redhat.com>
 
 2000-11-22  Loren J. Rittle  <ljrittle@acm.org>
 
-        * ltcf-cxx.sh: Support creation of C++ shared libraries on
-        recent versions of FreeBSD (release 3 or later).
-        * ltconfig: On FreeBSD, -lc must not be provided when building
-        a shared library or else the standard -pthread gcc option is
-        rendered worthless to later users of the built library.
+	* ltcf-cxx.sh: Support creation of C++ shared libraries on
+	recent versions of FreeBSD (release 3 or later).
+	* ltconfig: On FreeBSD, -lc must not be provided when building
+	a shared library or else the standard -pthread gcc option is
+	rendered worthless to later users of the built library.
 
 2000-11-16  Fred Fish  <fnf@be.com>
 
@@ -900,8 +921,8 @@ Sun Sep 17 16:55:59 CEST 2000	Marc Espie <espie@cvs.openbsd.org>
 
 Wed Sep 13 11:11:29 2000  Jeffrey A Law  (law@cygnus.com)
 
-        * configure.in: Do not build byacc for hppa64.  Provide paths to the
-        X11 libraries for hppa64.
+	* configure.in: Do not build byacc for hppa64.  Provide paths to the
+	X11 libraries for hppa64.
 
 2000-09-08  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
@@ -1127,7 +1148,7 @@ Wed Sep 13 11:11:29 2000  Jeffrey A Law  (law@cygnus.com)
 
 2000-07-01  Koundinya K  <kk@ddeorg.soft.net>
 
-        * ltconfig: Add support for mips-dde-sysv4.2MP
+	* ltconfig: Add support for mips-dde-sysv4.2MP
 
 2000-06-29  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
@@ -1159,12 +1180,12 @@ Mon May 29 21:15:00 MET 2000  Philipp Thomas  <pthomas@suse.de>
 
 20000-05-21  H.J. Lu  (hjl@gnu.org)
 
-        * Makefile.in (CC_FOR_TARGET): Make sure as/ld in the gcc
-        directory are used if they exist. Make sure
-        $(build_tooldir)/include is searched for header files,
-        $(build_tooldir)/lib/ for library files.
+	* Makefile.in (CC_FOR_TARGET): Make sure as/ld in the gcc
+	directory are used if they exist. Make sure
+	$(build_tooldir)/include is searched for header files,
+	$(build_tooldir)/lib/ for library files.
 	(GCC_FOR_TARGET): Likewise.
-        (CXX_FOR_TARGET): Likewise.
+	(CXX_FOR_TARGET): Likewise.
 
 Thu May 18 10:58:13 2000  Jeffrey A Law  (law@cygnus.com)
 
@@ -1216,7 +1237,7 @@ Wed May 10 21:26:51 2000  Jim Wilson  <wilson@cygnus.com>
 2000-05-08  Eli Zaretskii  <eliz@is.elta.co.il>
 
 	* djunpack.bat: Change the Sed script to replace @V@ in fnchange.lst
-        with the version name.
+	with the version name.
 
 Sat May  6 21:12:55 CDT 2000  Jason Eckhardt  <jle@cygnus.com>
 
@@ -1239,8 +1260,8 @@ Wed Apr 19 12:46:26 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 2000-04-16  Dave Pitts  <dpitts@cozx.com>
 
-        * config.sub (case $basic_machine): Change default for "ibm-*"
-        to "openedition".
+	* config.sub (case $basic_machine): Change default for "ibm-*"
+	to "openedition".
 
 2000-04-13  Andreas Jaeger  <aj@suse.de>
 
@@ -1269,13 +1290,13 @@ Thu Apr  6 16:15:14 2000  Philippe De Muyter  <phdm@macqel.be>
 	* MAINTAINERS: Added myself.
 
 2000-04-05  Benjamin Kosnik  <bkoz@cygnus.com>
-            Martin v. Loewis  <martin@loewis.home.cs.tu-berlin.de>
+	    Martin v. Loewis  <martin@loewis.home.cs.tu-berlin.de>
 
-        * configure.in (enable_libstdcxx_v3): Add.
-        (target_libs): Add bits here to switch between libstdc++-v2 and
-        libstdc++-v3.
-        * config.if: And this file too.
-        * Makefile.in: Add libstdc++-v3 targets.
+	* configure.in (enable_libstdcxx_v3): Add.
+	(target_libs): Add bits here to switch between libstdc++-v2 and
+	libstdc++-v3.
+	* config.if: And this file too.
+	* Makefile.in: Add libstdc++-v3 targets.
 
 2000-04-05  Michael Meissner  <meissner@redhat.com>
 
@@ -1497,15 +1518,15 @@ Tue Jun 22 23:45:18 1999  Tom Tromey  <tromey@cygnus.com>
 	(configure-target-boehm-gc): New target.
 	(configure-target-qthreads): New target.
 
-        * configure.in (target_libs): Added target-qthreads.
-        * Makefile.in (ALL_TARGET_MODULES): Added qthreads.
-        (CONFIGURE_TARGET_MODULES): Likewise.
-        (CHECK_TARGET_MODULES): Likewise.
-        (INSTALL_TARGET_MODULES): Likewise.
-        (CLEAN_TARGET_MODULES): Likewise.
-        (all-target-qthreads): New target.
-        (configure-target-libjava): Depend on configure-target-qthreads.
-        (all-target-libjava): Depend on all-target-qthreads.
+	* configure.in (target_libs): Added target-qthreads.
+	* Makefile.in (ALL_TARGET_MODULES): Added qthreads.
+	(CONFIGURE_TARGET_MODULES): Likewise.
+	(CHECK_TARGET_MODULES): Likewise.
+	(INSTALL_TARGET_MODULES): Likewise.
+	(CLEAN_TARGET_MODULES): Likewise.
+	(all-target-qthreads): New target.
+	(configure-target-libjava): Depend on configure-target-qthreads.
+	(all-target-libjava): Depend on all-target-qthreads.
 
 	* Makefile.in (ALL_TARGET_MODULES): Added libjava, boehm-gc.
 	(CONFIGURE_TARGET_MODULES): Likewise.
@@ -1593,7 +1614,7 @@ Thu May 20 10:00:42 1999   Stephen L Moshier  <moshier@world.std.com>
 	Bad merge removed these two changes.
 
 Tue Apr 13 22:50:54 1999  Donn Terry (donn@interix.com)
-                          Martin Heller (Ing.-Buero_Heller@t-online.de)
+			  Martin Heller (Ing.-Buero_Heller@t-online.de)
 
 	* config.guess (interix Alpha): Add.
 
@@ -1650,7 +1671,7 @@ Fri Apr  2 15:11:32 1999  H.J. Lu  (hjl@gnu.org)
 
 1999-03-21  Ben Elliston  <bje@cygnus.com>
 
-        * config.guess: Correct typo for detecting ELF on FreeBSD.
+	* config.guess: Correct typo for detecting ELF on FreeBSD.
 
 Thu Mar 18 00:17:50 1999  Mark Elbrecht <snowball3@usa.net>
 
@@ -1760,8 +1781,8 @@ Tue Feb  2 19:46:40 1999  Jim Wilson  <wilson@cygnus.com>
 
 Tue Feb  2 20:05:05 1999  Catherine Moore  <clm@cygnus.com>
 
-        * config.sub (oabi):  Recognize.
-        * configure.in (arm-*-oabi):  Handle.
+	* config.sub (oabi):  Recognize.
+	* configure.in (arm-*-oabi):  Handle.
 
 Sat Jan 30 06:09:00 1999  Robert Lipe  (robertlipe@usa.net)
 
@@ -1849,8 +1870,8 @@ Wed Nov 18 20:13:29 1998  Christopher Faylor <cgf@cygnus.com>
 
 Tue Nov 17 16:57:51 1998  Geoffrey Noer  <noer@cygnus.com>
 
-        * Makefile.in: modify CC_FOR_TARGET and CXX_FOR_TARGET so that
-        they include winsup/include when it's a cygwin target.
+	* Makefile.in: modify CC_FOR_TARGET and CXX_FOR_TARGET so that
+	they include winsup/include when it's a cygwin target.
 
 1998-11-12  Tom Tromey  <tromey@cygnus.com>
 
@@ -1876,7 +1897,7 @@ Wed Nov  4 18:49:43 1998  Dave Brolley  <brolley@cygnus.com>
 
 Mon Nov  2 15:19:33 1998  Geoffrey Noer  <noer@cygnus.com>
 
-        * configure.in: drop "32" from config/mh-cygwin32.  Check
+	* configure.in: drop "32" from config/mh-cygwin32.  Check
 	cygwin* instead of cygwin32*.
 	* config.sub: Check cygwin* instead of cygwin32*.
 
@@ -2482,7 +2503,7 @@ Fri Mar  6 00:14:55 1998  Franz Sirl <Franz.Sirl-kernel@lauterbach.com>
 
 Mon Feb 23 15:09:18 1998  Bruno Haible <bruno@linuix.mathematik.uni-karlsruhe.de
 
-        * config.sub (sco5): Fix typo.
+	* config.sub (sco5): Fix typo.
 
 Mon Feb 23 14:46:06 1998  Ian Lance Taylor  <ian@cygnus.com>
 
@@ -2794,10 +2815,10 @@ Sat Nov  8 14:42:59 1997  Michael Meissner  <meissner@cygnus.com>
 
 Fri Nov  7 10:34:09 1997  Rob Savoye  <rob@darkstar.cygnus.com>
 
-        * include/libiberty.h: Add extern "C" { so it can be used with C++
-        progrms.
-        * include/remote-sim.h:  Add extern "C" { so it can be used with C++
-        programs.
+	* include/libiberty.h: Add extern "C" { so it can be used with C++
+	progrms.
+	* include/remote-sim.h:  Add extern "C" { so it can be used with C++
+	programs.
 
 Thu Oct 30 11:09:29 1997  Michael Meissner  <meissner@cygnus.com>
 
@@ -2921,7 +2942,7 @@ Sun Sep  7 15:55:28 1997  Gavin Koch  <gavin@cygnus.com>
 
 Fri Sep  5 16:11:28 1997  Joel Sherrill  (joel@OARcorp.com)
 
-        * configure.in (*-*-rtems*): Do not build libgloss for rtems.
+	* configure.in (*-*-rtems*): Do not build libgloss for rtems.
 
 Fri Sep  5 12:27:17 1997  Jeffrey A Law  (law@cygnus.com)
 
@@ -2989,7 +3010,7 @@ Thu Aug 14 14:42:17 1997  Ian Lance Taylor  <ian@cygnus.com>
 
 	* configure: When handling a Canadian Cross, handle YACC as well as
 	BISON.  Just set BISON to bison.  When setting YACC, prefer bison.
-        * Makefile.in (all-bison): Depend upon all-texinfo.
+	* Makefile.in (all-bison): Depend upon all-texinfo.
 
 Tue Aug 12 20:09:48 1997  Jason Merrill  <jason@yorick.cygnus.com>
 
@@ -3322,7 +3343,7 @@ Tue Apr  1 16:28:50 1997  Klaus Kaempf  <kkaempf@progis.de>
 
 Mon Mar 31 16:26:55 1997  Joel Sherrill  <joel@oarcorp.com>
 
-        * configure.in (hppa1.1-*-rtems*): New target, like hppa-*-*elf*.
+	* configure.in (hppa1.1-*-rtems*): New target, like hppa-*-*elf*.
 
 Sun Mar 30 12:38:27 1997  Fred Fish  <fnf@cygnus.com>
 
@@ -3674,11 +3695,11 @@ Wed Oct  9 17:24:59 1996  Per Bothner  <bothner@deneb.cygnus.com>
 	* config.guess:  Merge from FSF.
 
 	1996-09-12  Richard Stallman  <rms@ethanol.gnu.ai.mit.edu>
-        * config.guess: Use pc instead of unknown, for pc clone systems.
-        Change linux to linux-gnu.
+	* config.guess: Use pc instead of unknown, for pc clone systems.
+	Change linux to linux-gnu.
 
 	Mon Jul 15 23:51:11 1996  Karl Heuer  <kwzh@gnu.ai.mit.edu>
-        * config.guess: Avoid non-portable tr syntax.
+	* config.guess: Avoid non-portable tr syntax.
 
 Wed Oct  9 06:06:46 1996  Jeffrey A Law  (law@cygnus.com)
 
@@ -3952,9 +3973,9 @@ Mon Jun 24 15:01:12 1996  Joel Sherrill  <joel@merlin.gcs.redstone.army.mil>
 
 Sun Jun 23 22:41:54 1996  Geoffrey Noer  <noer@cygnus.com>
 
-        * configure.in: enable dosrel for cygwin32-hosted builds,
-                remove diff from the list of things not buildable
-                via Canadian Cross
+	* configure.in: enable dosrel for cygwin32-hosted builds,
+		remove diff from the list of things not buildable
+		via Canadian Cross
 
 Sat Jun 22 11:39:01 1996  Jason Merrill  <jason@yorick.cygnus.com>
 
@@ -4156,8 +4177,8 @@ Thu Mar 28 14:11:11 1996  Tom Tromey  <tromey@creche.cygnus.com>
 
 Tue Mar 26 21:18:50 1996  Andrew Cagney  <cagney@kremvax.highland.com.au>
 
-        * configure (--enable-*): Handle quoted option lists such as
-        --enable-sim-cflags='-g0 -O' better.
+	* configure (--enable-*): Handle quoted option lists such as
+	--enable-sim-cflags='-g0 -O' better.
 
 Thu Mar 21 11:53:08 1996  Michael Meissner  <meissner@tiktok.cygnus.com>
 
@@ -5158,7 +5179,7 @@ Fri Apr 14 15:21:17 1995  Doug Evans  <dje@chestnut.cygnus.com>
 Wed Apr 12 16:06:01 1995  Jason Merrill  <jason@phydeaux.cygnus.com>
 
 	* test-build.mk: Enable building of shared libraries on IRIX 5 and
-        OSF/1.  Fix compiler flags.
+	OSF/1.  Fix compiler flags.
 	* build-all.mk: Support Linux and OSF/1 3.0.  Fix compiler flags.
 
 Tue Apr 11 18:55:40 1995  Doug Evans  <dje@canuck.cygnus.com>
@@ -5592,21 +5613,21 @@ Fri Aug 26 13:05:27 1994  Per Bothner  (bothner@kalessin.cygnus.com)
 	Thu Aug 25 20:28:51 1994  Richard Stallman  <rms@mole.gnu.ai.mit.edu>
 
 	* config.guess (Pyramid*:OSx*:*:*): New case.
-        (PATH): Add /.attbin at end for finding uname.
-        (dummy.c): Handle i860-alliant-bsd.  Follow whitespace conventions.
+	(PATH): Add /.attbin at end for finding uname.
+	(dummy.c): Handle i860-alliant-bsd.  Follow whitespace conventions.
 
 	Wed Aug 17 18:21:02 1994  Tor Egge  (tegge@pvv.unit.no)
 
-        * config.guess (M88*:DolphinOS:*:*): New case.
+	* config.guess (M88*:DolphinOS:*:*): New case.
 
 	Thu Aug 11 17:00:13 1994  Stan Cox  (coxs@dg-rtp.dg.com)
 
-        * config.guess (AViiON:dgux:*:*): Use TARGET_BINARY_INTERFACE
-        to select whether to use ELF or COFF.
+	* config.guess (AViiON:dgux:*:*): Use TARGET_BINARY_INTERFACE
+	to select whether to use ELF or COFF.
 
 	Sun Jul 24 16:20:53 1994  Richard Stallman  <rms@mole.gnu.ai.mit.edu>
 
-        * config.guess: Recognize i860-stardent-sysv and i860-unknown-sysv.
+	* config.guess: Recognize i860-stardent-sysv and i860-unknown-sysv.
 
 	Sun May  1 10:23:10 1994  Richard Stallman  (rms@mole.gnu.ai.mit.edu)
 
@@ -5945,7 +5966,7 @@ Thu Apr 14 23:33:17 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)
 Wed Apr 13 15:14:52 1994  Bill Cox  (bill@cygnus.com)
 
 	* configure: Make file links cleanly even if Lynx fails on
-          an NFS symlink (at least fail cleanly).
+	  an NFS symlink (at least fail cleanly).
 
 Mon Apr 11 10:58:56 1994  Jim Wilson  (wilson@sphagnum.cygnus.com)
 
@@ -6098,7 +6119,7 @@ Sat Feb  5 01:00:33 1994  Ian Lance Taylor  (ian@tweedledumb.cygnus.com)
 
 Wed Feb  2 13:57:57 1994  Jeffrey A. Law  (law@snake.cs.utah.edu)
 
-        * Makefile.in:  Avoid bug in losing hpux sed.
+	* Makefile.in:  Avoid bug in losing hpux sed.
 
 Wed Feb  2 14:53:05 1994  Jim Kingdon  (kingdon@lioth.cygnus.com)
 
@@ -7533,8 +7554,8 @@ Thu Oct 29 00:12:41 1992  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)
 	ranlib.
 
 	* configure: also define $(host_canonical) and
-        $(target_canonical), which are the full, canonical names for the
-        given host and target
+	$(target_canonical), which are the full, canonical names for the
+	given host and target
 
 Sun Nov  1 16:38:17 1992  Per Bothner  (bothner@cygnus.com)
 
@@ -7682,7 +7703,7 @@ Mon Aug 24 14:05:14 1992  Ian Lance Taylor  (ian@cygnus.com)
 
 Tue Aug 11 23:13:17 1992  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)
 
-        * COPYING: new file, GPL v2
+	* COPYING: new file, GPL v2
 
 Tue Aug  4 01:12:43 1992  david d `zoo' zuhn  (zoo at cirdan.cygnus.com)
 
