--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,5 +1,13 @@
+2001-11-27  Zack Weinberg  <zack@codesourcery.com>
+
+	* _doprnt.c: Moved here from gcc/doprint.c.  Adjust to build
+	in libiberty context.  Fix typo in leading comment.
+	* configure.in: Fix various AC_DEFINEs so autoheader works.
+	If any of vprintf, vsprintf, vfprintf is missing from libc,
+	then AC_REPLACE_FUNCS(_doprnt).
+
 2001-11-26  DJ Delorie  <dj@redhat.com>
-            Daniel Jacobowitz  <drow@mvista.com>
+	    Daniel Jacobowitz  <drow@mvista.com>
 
 	* Makefile.in (stamp-h): Depend on Makefile for proper
 	serialization.
