--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-28  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.dg/20011127-1.c: New test.
+
 2001-11-25  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/format/strfmon-1.c: Update comments.  Adjust examples
